--- a/charm/AndroidManifest.xml
+++ b/charm/AndroidManifest.xml
@@ -8,10 +8,11 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name" 
+        android:theme="@android:style/Theme.Light">
         <activity
             android:label="@string/app_name"
-            android:name=".CharmSettingsActivity" 
+            android:name=".CharmSensorMonitorActivity" 
             android:screenOrientation="portrait" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
