--- a/charm/AndroidManifest.xml
+++ b/charm/AndroidManifest.xml
@@ -9,15 +9,29 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" 
-        android:theme="@android:style/Theme.Light">
+        android:theme="@android:style/Theme.Light.NoTitleBar">
         <activity
             android:label="@string/app_name"
-            android:name=".CharmSensorMonitorActivity" 
+            android:name=".CharmMainTabActivity" 
             android:screenOrientation="portrait" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".CharmSensorMonitorActivity" 
+            android:screenOrientation="portrait" >
+            <!-- <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter> -->
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".UserLabelActivity" 
+            android:screenOrientation="portrait" >            
         </activity>
     </application>
 	
