--- a/charm/AndroidManifest.xml
+++ b/charm/AndroidManifest.xml
@@ -30,9 +30,19 @@
         </activity>
         <activity
             android:label="@string/app_name"
-            android:name=".UserLabelActivity" 
+            android:name=".AttributeLabelActivity" 
             android:screenOrientation="portrait" >            
         </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".ClassLabelActivity" 
+            android:screenOrientation="portrait" >            
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".SettingsActivity" 
+            android:screenOrientation="portrait" >            
+        </activity>            
     </application>
 	
     <uses-permission android:name="android.permission.RECORD_AUDIO" />  
@@ -48,5 +58,6 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
   	<uses-permission android:name="android.permission.SET_DEBUG_APP"></uses-permission>
+  	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
   	
 </manifest>
