--- a/charm/AndroidManifest.xml
+++ b/charm/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:label="@string/app_name"
             android:name=".CharmMainTabActivity" 
-            android:screenOrientation="portrait" >
+            android:screenOrientation="user" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,7 +22,7 @@
         <activity
             android:label="@string/app_name"
             android:name=".CharmSensorMonitorActivity" 
-            android:screenOrientation="portrait" >
+            android:screenOrientation="user" >
             <!-- <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -31,17 +31,17 @@
         <activity
             android:label="@string/app_name"
             android:name=".AttributeLabelActivity" 
-            android:screenOrientation="portrait" >            
+            android:screenOrientation="user" >            
         </activity>
         <activity
             android:label="@string/app_name"
             android:name=".ClassLabelActivity" 
-            android:screenOrientation="portrait" >            
+            android:screenOrientation="user" >            
         </activity>
         <activity
             android:label="@string/app_name"
             android:name=".SettingsActivity" 
-            android:screenOrientation="portrait" >            
+            android:screenOrientation="user" >            
         </activity>            
     </application>
 	
