--- a/charm/AndroidManifest.xml
+++ b/charm/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" 
-        android:theme="@android:style/Theme.Light.NoTitleBar">
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
         <activity
             android:label="@string/app_name"
             android:name=".CharmMainTabActivity" 
